[package]
name = "prefix-await"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
syn = { version = "0.15", features = [ "full" ] }
