[package]
name = "hello-world"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { package = "futures-preview", version = "0.3.0-alpha.16" }
prefix-await = { path = "../.." }
